kube/keycloack/keycloack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: oasa-telemat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
      - name: host-volume
        hostPath:
          path: /tmp/keycloak-depl
          type: DirectoryOrCreate
      # - name: tmp-volume
      #   emptyDir: {}
      containers:
      - name: keycloak
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/tmp
          name: host-volume
        image: quay.io/keycloak/keycloak:17.0.1-legacy
        ports:
        - containerPort: 8080
        # resources:
        #   requests:
        #     cpu: "500m"
        #     memory: "1Gi"
        #     ephemeral-storage: "512Mi"
        #   limits:
        #     cpu: "1"
        #     memory: "2Gi"
        #     ephemeral-storage: "1Gi"
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
