kube/keycloack/keycloak.deployment-v4.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: oasa-telemat
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        args: ["start", "--cache-stack=kubernetes", "--spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true", "--hostname=https://oauth.opsw.gr"]
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: console
          containerPort: 9000
        - name: jgroups
          containerPort: 7600
