kube/keycloack/keycloak.deployment-v5.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: oasa-telemat
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        args: ["start", "--cache-stack=kubernetes", "--https-certificate-file=/etc/certs/tls.crt", "--https-certificate-key-file=/etc/certs/tls.key"]
        volumeMounts:
          - name: tls
            mountPath: "/etc/certs"
            readOnly: true
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: tls
        secret:
          secretName: tls-secret-v2
