kube/keycloack/keycloak.test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-test
  namespace: oasa-telemat
  labels:
    app: keycloak-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-test
  template:
    metadata:
      labels:
        app: keycloak-test
    spec:
      containers:
        - name: keycloak-cntr
          image: quay.io/keycloak/keycloak:17.0.1-legacy
          ports:
            - containerPort: 8080
