kube/keycloack/keycloack.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  namespace: oasa-telemat
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak-test
